# json-schema-to-zod

./: CHANGELOG.md  Cargo.toml  README.md
src/: jsdocs.rs  lib.rs  parse_schema.rs  parsers.rs  predicates.rs  types.rs  util.rs
tests/: all_json_integration.rs  cli.rs  json_schema_to_zod.rs  parse_all_of.rs  parse_any_of.rs  parse_array.rs  parse_const.rs  parse_enum.rs  parse_multiple_type.rs  parse_not.rs  parse_nullable.rs  parse_number.rs  parse_object.rs  parse_one_of.rs  parse_schema.rs  parse_simple_discriminated_one_of.rs  parse_string.rs  util_half.rs  util_omit.rs
tests/common/: mod.rs
tests/fixtures/: all.v3.golden.txt  all.v4.golden.txt
